# SanzhanAsistant

./: .gitignore  README.md  interface.json  pyproject.toml
config/: default.toml  default.yaml  safety.toml  safety.yaml  tasks.toml  tasks.yaml  teams.toml
docs/: bootstrap-task-breakdown.md  mvp-feature-checklist.md  sanzhan-assistant-roadmap.md
resource/: default_pipeline.json
resource/image/: README.md
resource/model/ocr/: README.md
resource/pipeline/daily/: daily.json
resource/pipeline/debug/: debug.json
resource/pipeline/recovery/: recovery.json
resource/pipeline/startup/: bootstrap.json
src/: __init__.py
src/actions/: __init__.py
src/agent/: __init__.py  device.py
src/app/: main.py
src/core/: config.py  runtime.py
src/pipelines/: __init__.py  daily_runner.py  task_registry.py
src/planner/: __init__.py  team_policy.py
src/recognizers/: __init__.py  base.py  page_state.py
src/report/: reporter.py
src/safety/: __init__.py  guard.py
src/state/: __init__.py  models.py
tests/fixtures/: README.md
tests/smoke/: README.md
